// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuizzesList renders 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <list>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "height": 100,
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
                "fontWeight": "600",
              },
              undefined,
            ]
          }
        >
          There are no quizzes to display.
        </Text>
      </View>
    </list>
  </View>
</RCTSafeAreaView>
`;

exports[`QuizzesList renders in correct order 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <list>
      <section>
        <View
          accessibilityTraits="header"
          style={
            Array [
              Object {
                "backgroundColor": "#F5F5F5",
                "flex": 1,
                "justifyContent": "center",
                "paddingLeft": 16,
                "paddingRight": 8,
                "paddingVertical": 4,
              },
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
              },
              Object {
                "borderTopColor": "#C7CDD1",
                "borderTopWidth": 0.5,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#8B969E",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  undefined,
                ],
              ]
            }
          >
            Assignments
          </Text>
        </View>
        <item>
          <TouchableHighlight
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            onPress={[Function]}
            style={
              Array [
                undefined,
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
              ]
            }
            testID="quiz-row-0"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "flex": 1,
                    "flexDirection": "row",
                    "minHeight": 54,
                    "paddingBottom": 12,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 12,
                  },
                  Object {
                    "backgroundColor": "#FFFFFF",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "flex-start",
                  }
                }
              >
                <View
                  accessibilityLabel="Published"
                  style={
                    Object {
                      "flex": 0,
                    }
                  }
                >
                  <Image
                    resizeMode="cover"
                    source={
                      Object {
                        "testUri": "../../../src/images/course/Quiz.png",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "height": 24,
                          "width": 24,
                        },
                        Object {
                          "tintColor": null,
                        },
                      ]
                    }
                    testID="access-icon-image"
                  />
                  <Image
                    source={
                      Object {
                        "uri": "publishSolid",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "borderRadius": 8,
                          "bottom": -4,
                          "height": 16,
                          "position": "absolute",
                          "right": -4,
                          "width": 16,
                        },
                        Object {
                          "tintColor": "#00AC18",
                        },
                      ]
                    }
                    testID="access-icon-icon"
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                    },
                    Object {
                      "marginLeft": 12,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "color": "#2D3B45",
                          "fontWeight": "600",
                        },
                      ],
                    ]
                  }
                >
                  Second
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    separated={
                      Array [
                        "Due Mar 28, 2117 at 9:07 AM",
                      ]
                    }
                    separator="  •  "
                    style={
                      Array [
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "color": "#8B969E",
                          "fontSize": 14,
                          "marginTop": 2,
                        },
                      ]
                    }
                  >
                    Due Mar 28, 2117 at 9:07 AM
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      separated={
                        Array [
                          "20 pts",
                          "12 Questions",
                        ]
                      }
                      separator="  •  "
                      style={
                        Array [
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {
                            "fontSize": 14,
                          },
                        ]
                      }
                    >
                      20 pts
                    </Text>
                    <Text
                      accessibilityLabel=""
                      accessible={false}
                      style={
                        Array [
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Array [
                            Object {
                              "fontSize": 14,
                            },
                            Object {
                              "alignSelf": "center",
                              "color": "#8B969E",
                              "fontSize": 10,
                            },
                          ],
                        ]
                      }
                    >
                        •  
                    </Text>
                    <Text
                      separated={
                        Array [
                          "20 pts",
                          "12 Questions",
                        ]
                      }
                      separator="  •  "
                      style={
                        Array [
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {
                            "fontSize": 14,
                          },
                        ]
                      }
                    >
                      12 Questions
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignSelf": "center",
                          "backgroundColor": "transparent",
                          "borderColor": "#C7CDD1",
                          "borderRightWidth": 2,
                          "borderTopWidth": 2,
                          "height": 10,
                          "marginLeft": 7,
                          "width": 10,
                        },
                        Object {
                          "transform": Array [
                            Object {
                              "rotate": "45deg",
                            },
                          ],
                        },
                      ]
                    }
                  />
                </View>
              </View>
            </View>
          </TouchableHighlight>
        </item>
        <item>
          <TouchableHighlight
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            onPress={[Function]}
            style={
              Array [
                undefined,
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
              ]
            }
            testID="quiz-row-1"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "flex": 1,
                    "flexDirection": "row",
                    "minHeight": 54,
                    "paddingBottom": 12,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 12,
                  },
                  Object {
                    "backgroundColor": "#FFFFFF",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "flex-start",
                  }
                }
              >
                <View
                  accessibilityLabel="Published"
                  style={
                    Object {
                      "flex": 0,
                    }
                  }
                >
                  <Image
                    resizeMode="cover"
                    source={
                      Object {
                        "testUri": "../../../src/images/course/Quiz.png",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "height": 24,
                          "width": 24,
                        },
                        Object {
                          "tintColor": null,
                        },
                      ]
                    }
                    testID="access-icon-image"
                  />
                  <Image
                    source={
                      Object {
                        "uri": "publishSolid",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "borderRadius": 8,
                          "bottom": -4,
                          "height": 16,
                          "position": "absolute",
                          "right": -4,
                          "width": 16,
                        },
                        Object {
                          "tintColor": "#00AC18",
                        },
                      ]
                    }
                    testID="access-icon-icon"
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                    },
                    Object {
                      "marginLeft": 12,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "color": "#2D3B45",
                          "fontWeight": "600",
                        },
                      ],
                    ]
                  }
                >
                  First
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    separated={
                      Array [
                        "Due Mar 28, 2118 at 9:07 AM",
                      ]
                    }
                    separator="  •  "
                    style={
                      Array [
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "color": "#8B969E",
                          "fontSize": 14,
                          "marginTop": 2,
                        },
                      ]
                    }
                  >
                    Due Mar 28, 2118 at 9:07 AM
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      separated={
                        Array [
                          "20 pts",
                          "12 Questions",
                        ]
                      }
                      separator="  •  "
                      style={
                        Array [
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {
                            "fontSize": 14,
                          },
                        ]
                      }
                    >
                      20 pts
                    </Text>
                    <Text
                      accessibilityLabel=""
                      accessible={false}
                      style={
                        Array [
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Array [
                            Object {
                              "fontSize": 14,
                            },
                            Object {
                              "alignSelf": "center",
                              "color": "#8B969E",
                              "fontSize": 10,
                            },
                          ],
                        ]
                      }
                    >
                        •  
                    </Text>
                    <Text
                      separated={
                        Array [
                          "20 pts",
                          "12 Questions",
                        ]
                      }
                      separator="  •  "
                      style={
                        Array [
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {
                            "fontSize": 14,
                          },
                        ]
                      }
                    >
                      12 Questions
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignSelf": "center",
                          "backgroundColor": "transparent",
                          "borderColor": "#C7CDD1",
                          "borderRightWidth": 2,
                          "borderTopWidth": 2,
                          "height": 10,
                          "marginLeft": 7,
                          "width": 10,
                        },
                        Object {
                          "transform": Array [
                            Object {
                              "rotate": "45deg",
                            },
                          ],
                        },
                      ]
                    }
                  />
                </View>
              </View>
            </View>
          </TouchableHighlight>
        </item>
      </section>
    </list>
  </View>
</RCTSafeAreaView>
`;

exports[`QuizzesList renders quizzes 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <list>
      <section>
        <View
          accessibilityTraits="header"
          style={
            Array [
              Object {
                "backgroundColor": "#F5F5F5",
                "flex": 1,
                "justifyContent": "center",
                "paddingLeft": 16,
                "paddingRight": 8,
                "paddingVertical": 4,
              },
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
              },
              Object {
                "borderTopColor": "#C7CDD1",
                "borderTopWidth": 0.5,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#8B969E",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  undefined,
                ],
              ]
            }
          >
            Assignments
          </Text>
        </View>
        <item>
          <TouchableHighlight
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            onPress={[Function]}
            style={
              Array [
                undefined,
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
              ]
            }
            testID="quiz-row-0"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "flex": 1,
                    "flexDirection": "row",
                    "minHeight": 54,
                    "paddingBottom": 12,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 12,
                  },
                  Object {
                    "backgroundColor": "#FFFFFF",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "flex-start",
                  }
                }
              >
                <View
                  accessibilityLabel="Published"
                  style={
                    Object {
                      "flex": 0,
                    }
                  }
                >
                  <Image
                    resizeMode="cover"
                    source={
                      Object {
                        "testUri": "../../../src/images/course/Quiz.png",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "height": 24,
                          "width": 24,
                        },
                        Object {
                          "tintColor": null,
                        },
                      ]
                    }
                    testID="access-icon-image"
                  />
                  <Image
                    source={
                      Object {
                        "uri": "publishSolid",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "borderRadius": 8,
                          "bottom": -4,
                          "height": 16,
                          "position": "absolute",
                          "right": -4,
                          "width": 16,
                        },
                        Object {
                          "tintColor": "#00AC18",
                        },
                      ]
                    }
                    testID="access-icon-icon"
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                    },
                    Object {
                      "marginLeft": 12,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "color": "#2D3B45",
                          "fontWeight": "600",
                        },
                      ],
                    ]
                  }
                >
                  Quiz 1
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    separated={
                      Array [
                        "Due Jan 23, 2013 at 11:59 PM",
                      ]
                    }
                    separator="  •  "
                    style={
                      Array [
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "color": "#8B969E",
                          "fontSize": 14,
                          "marginTop": 2,
                        },
                      ]
                    }
                  >
                    Due Jan 23, 2013 at 11:59 PM
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      separated={
                        Array [
                          "20 pts",
                          "12 Questions",
                        ]
                      }
                      separator="  •  "
                      style={
                        Array [
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {
                            "fontSize": 14,
                          },
                        ]
                      }
                    >
                      20 pts
                    </Text>
                    <Text
                      accessibilityLabel=""
                      accessible={false}
                      style={
                        Array [
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Array [
                            Object {
                              "fontSize": 14,
                            },
                            Object {
                              "alignSelf": "center",
                              "color": "#8B969E",
                              "fontSize": 10,
                            },
                          ],
                        ]
                      }
                    >
                        •  
                    </Text>
                    <Text
                      separated={
                        Array [
                          "20 pts",
                          "12 Questions",
                        ]
                      }
                      separator="  •  "
                      style={
                        Array [
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {
                            "fontSize": 14,
                          },
                        ]
                      }
                    >
                      12 Questions
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignSelf": "center",
                          "backgroundColor": "transparent",
                          "borderColor": "#C7CDD1",
                          "borderRightWidth": 2,
                          "borderTopWidth": 2,
                          "height": 10,
                          "marginLeft": 7,
                          "width": 10,
                        },
                        Object {
                          "transform": Array [
                            Object {
                              "rotate": "45deg",
                            },
                          ],
                        },
                      ]
                    }
                  />
                </View>
              </View>
            </View>
          </TouchableHighlight>
        </item>
        <item>
          <TouchableHighlight
            accessibilityTraits={
              Array [
                "button",
              ]
            }
            onPress={[Function]}
            style={
              Array [
                undefined,
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
              ]
            }
            testID="quiz-row-1"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "flex": 1,
                    "flexDirection": "row",
                    "minHeight": 54,
                    "paddingBottom": 12,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 12,
                  },
                  Object {
                    "backgroundColor": "#FFFFFF",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "flex-start",
                  }
                }
              >
                <View
                  accessibilityLabel="Published"
                  style={
                    Object {
                      "flex": 0,
                    }
                  }
                >
                  <Image
                    resizeMode="cover"
                    source={
                      Object {
                        "testUri": "../../../src/images/course/Quiz.png",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "height": 24,
                          "width": 24,
                        },
                        Object {
                          "tintColor": null,
                        },
                      ]
                    }
                    testID="access-icon-image"
                  />
                  <Image
                    source={
                      Object {
                        "uri": "publishSolid",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "borderRadius": 8,
                          "bottom": -4,
                          "height": 16,
                          "position": "absolute",
                          "right": -4,
                          "width": 16,
                        },
                        Object {
                          "tintColor": "#00AC18",
                        },
                      ]
                    }
                    testID="access-icon-icon"
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "flexDirection": "column",
                      "justifyContent": "center",
                    },
                    Object {
                      "marginLeft": 12,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Array [
                        Object {
                          "color": "#2D3B45",
                          "fontWeight": "600",
                        },
                      ],
                    ]
                  }
                >
                  Quiz 2
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <Text
                    separated={
                      Array [
                        "Due Jan 23, 2013 at 11:59 PM",
                      ]
                    }
                    separator="  •  "
                    style={
                      Array [
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "color": "#8B969E",
                          "fontSize": 14,
                          "marginTop": 2,
                        },
                      ]
                    }
                  >
                    Due Jan 23, 2013 at 11:59 PM
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      separated={
                        Array [
                          "20 pts",
                          "12 Questions",
                        ]
                      }
                      separator="  •  "
                      style={
                        Array [
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {
                            "fontSize": 14,
                          },
                        ]
                      }
                    >
                      20 pts
                    </Text>
                    <Text
                      accessibilityLabel=""
                      accessible={false}
                      style={
                        Array [
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Array [
                            Object {
                              "fontSize": 14,
                            },
                            Object {
                              "alignSelf": "center",
                              "color": "#8B969E",
                              "fontSize": 10,
                            },
                          ],
                        ]
                      }
                    >
                        •  
                    </Text>
                    <Text
                      separated={
                        Array [
                          "20 pts",
                          "12 Questions",
                        ]
                      }
                      separator="  •  "
                      style={
                        Array [
                          Object {
                            "color": "#2D3B45",
                            "fontSize": 16,
                          },
                          Object {
                            "fontSize": 14,
                          },
                        ]
                      }
                    >
                      12 Questions
                    </Text>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "flex-end",
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignSelf": "center",
                          "backgroundColor": "transparent",
                          "borderColor": "#C7CDD1",
                          "borderRightWidth": 2,
                          "borderTopWidth": 2,
                          "height": 10,
                          "marginLeft": 7,
                          "width": 10,
                        },
                        Object {
                          "transform": Array [
                            Object {
                              "rotate": "45deg",
                            },
                          ],
                        },
                      ]
                    }
                  />
                </View>
              </View>
            </View>
          </TouchableHighlight>
        </item>
      </section>
    </list>
  </View>
</RCTSafeAreaView>
`;

exports[`QuizzesList renders the activity indicator when loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "flex": 1,
      }
    }
  />
</View>
`;
